# sprite-designer

./: .gitignore  LICENSE  README.md  package.json
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx  styles.css  theme.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: error.rs  lib.rs  main.rs  models.rs
apps/desktop/src-tauri/src/commands/: mod.rs
apps/desktop/src-tauri/src/openrouter/: mod.rs
apps/desktop/src-tauri/src/prompt/: mod.rs
apps/desktop/src-tauri/src/storage/: mod.rs
apps/desktop/src/components/: SpriteSheetPlayer.tsx
apps/desktop/src/lib/: api.ts  format.ts  grid.ts  types.ts
