[package]
name = "sprite-designer"
version = "0.1.0"
description = "Sprite/Art Studio desktop app"
authors = ["you"]
edition = "2021"

[lib]
name = "sprite_designer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.5.5", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
dotenvy = "0.15"
image = { version = "=0.24.9", default-features = false, features = ["png", "jpeg", "webp"] }
oxipng = { version = "9", default-features = false, features = ["parallel", "zopfli", "filetime"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "=2.10.2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
thiserror = "2"
time = "=0.3.36"
time-core = "=0.1.2"
time-macros = "=0.2.18"
dlopen2 = "=0.8.0"
dlopen2_derive = "=0.4.1"
uuid = { version = "1", features = ["serde", "v4"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
